# CRIMAC-annotationtools

./: .gitlab-ci.yml  CRIMAC_createlabels.py  CRIMAC_makelabelszarr.py  Dockerfile  KoronaCli.sh  LICENSE  README.md  pyproject.toml  requirements.txt  run_test.json  run_test.py  run_test_metric.py  script_test.py  setup.py  update_version.sh
annotationtools/: __init__.py
annotationtools/crimactools/: CRIMAC_makelabelszarr.py  __init__.py  correct_distping.py  parseworkfiles.py  writelabelszarr.py
annotationtools/readers/: __init__.py  convert_to_annotation.py  convert_to_annotations.py
annotationtools/utils/: simrad_parsers.py
annotationtools/writers/: __init__.py  annotation_to_nc.py  annotation_to_work.py
