[tool.poetry]
name = "CRIMAC_annotations_tools"
version = "0.1.0"
description = "pelacousticsAI forked"
authors = ["CRIMAC IMR"]
readme = "README.md"
packages = [{ include = "annotationtools" }]
exclude = ["**/test/**/*"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
xarray = {extras = ["io", "parallel"], version = "^2023.8.0"}
pyecholab = { git = "https://github.com/CRIMAC-WP4-Machine-learning/pyEcholab.git", branch = "RHT-EK80#egg=pyEcholab" }
numpy="^1.26.4"
xmltodict="^0.13.0"
zarr="^2.16.1"
pandas="^2.2.0"
pyarrow="^15.0.0"
rechunker="^0.5.2"
dask="^2024.1.1"
lxml="^5.1.0"
pytz="^2024.1"
future="^0.18.3"
netCDF4="^1.6.5"
numcodecs="^0.12.1"
scipy="^1.12.0"
matplotlib="^3.8.2"
psutil="^5.9.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
